<resources>
    <string name="app_name">POSKanri</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase">購入金額</string>
    <string name="sale">販売</string>
    <string name="customer_detail">顧客の詳細</string>
    <string name="display_purchase">顧客の表示</string>
    <string name="text_intro4">利益と損失</string>
    <string name="desc_intro1">初期購入価格を計算する</string>
    <string name="desc_intro2">税金やその他の費用に基づいて、販売価格を計算します</string>
    <string name="desc_intro3">顧客の詳細と販売情報を保存します</string>
    <string name="desc_intro4">損益を計算する</string>
    <string name="next">次</string>
    <string name="get_started">始めましょう</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="skip">スキップ</string>
    <string name="item_name">項目名</string>
    <string name="quantity">数量</string>
    <string name="tax">税金</string>
    <string name="size">サイズ</string>
    <string name="type">種類</string>
    <string name="pic">画像</string>
    <string name="weight">重量</string>
    <string name="comment">コメント</string>
    <string name="register">登録する</string>
    <string name="update">更新する</string>
    <string name="delete">削除する</string>
    <string name="delete_all">全部削除する</string>
    <string name="browse">ブラウズ</string>
    <string name="set_sale_price">Set Sale Price</string>
    <string name="calculate_sale_price">Calculate Sale Price</string>
</resources>
