<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/add_item_label"
                    android:layout_marginTop="8dp"
                    android:text="@string/pic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/et_purchase_pic"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/default_purchase_image"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/item_name" />

                <EditText
                    android:id="@+id/et_purchase_item_name"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="購入金額" />

                <EditText
                    android:id="@+id/et_purchase_price"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/et_purchase_qty"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/tax" />

                <EditText
                    android:id="@+id/et_purchase_tax"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/size" />

                <EditText
                    android:id="@+id/et_purchase_size"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/type" />

                <EditText
                    android:id="@+id/et_purchase_type"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/et_purchase_weight"
                    style="@style/add_item_editText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp">

                <TextView
                    style="@style/add_item_label"
                    android:text="@string/comment" />

                <EditText
                    android:id="@+id/et_purchase_comment"
                    style="@style/add_item_editText" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_purchase_register"
                style="@style/add_btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/add_item_background"
                android:text="@string/register"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>